# coordination

./: .gitignore  README.md  pyproject.toml
result/: coordinates.txt  paired-ttest.txt  predictability-parsability.csv
scripts/: eval.sh  gen_data.sh  rnng.sh
src/: accum_data.py  cc-grammar.txt  eval_f1.py  plot.py  tree.py  type.py
src/rnng-pytorch_/: README.md  beam_search.py  data.py  fixed_stack_models.py
