[tool.poetry]
name = "effcom-coordination"
version = "0.1.0"
description = ""
authors = ["kohei-kaji <kohei.kajikawa1223@gmail.com>"]
readme = "README.md"
packages = [{include = "effcom_coordination"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.5"
pyevalb = "^0.1.3"
nltk = "^3.9.1"
pandas = "^2.2.3"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
scipy = "1.13"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
